--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         }
         var map = L.map('map', {
             zoomControl:false, maxZoom:22, minZoom:1
-        }).fitBounds([[16.862576821290066,96.86100912908255],[19.854723339330093,102.72072504560774]]);
+        }).fitBounds([[14.218525404744716,97.77748009495727],[20.238356450274054,109.49691192800836]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -94,19 +94,19 @@
         var bounds_group = new L.featureGroup([]);
         function setBounds() {
         }
-        map.createPane('pane_OpenStreetMap_0');
-        map.getPane('pane_OpenStreetMap_0').style.zIndex = 400;
-        var layer_OpenStreetMap_0 = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            pane: 'pane_OpenStreetMap_0',
+        map.createPane('pane_GoogleSatellite_0');
+        map.getPane('pane_GoogleSatellite_0').style.zIndex = 400;
+        var layer_GoogleSatellite_0 = L.tileLayer('https://mt1.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
+            pane: 'pane_GoogleSatellite_0',
             opacity: 1.0,
             attribution: '',
             minZoom: 1,
             maxZoom: 22,
             minNativeZoom: 0,
-            maxNativeZoom: 19
+            maxNativeZoom: 18
         });
-        layer_OpenStreetMap_0;
-        map.addLayer(layer_OpenStreetMap_0);
+        layer_GoogleSatellite_0;
+        map.addLayer(layer_GoogleSatellite_0);
         function pop_9province20241223t082159z001__provinceth_provinceshp_1(feature, layer) {
             layer.on({
                 mouseout: function(e) {
@@ -297,7 +297,7 @@
         var overlaysTree = [
             {label: '<img src="legend/rfd_hotspot_excel_v2010_2.png" /> ความร้อน — rfd_hotspot_excel_v2010', layer: cluster_rfd_hotspot_excel_v2010_2},
             {label: '<img src="legend/9province20241223t082159z001__provinceth_provinceshp_1.png" /> 9 — province20241223t082159z001__provinceth_provinceshp', layer: layer_9province20241223t082159z001__provinceth_provinceshp_1},
-            {label: "OpenStreetMap", layer: layer_OpenStreetMap_0},]
+            {label: "GoogleSatellite", layer: layer_GoogleSatellite_0},]
         var lay = L.control.layers.tree(null, overlaysTree,{
             //namedToggle: true,
             //selectorBack: false,
